<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.csucsu.flipendo.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.csucsu.flipendo.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />


    <fragment
        android:id="@+id/pdfViewerFragment"
        android:name="com.csucsu.flipendo.ui.pdf.PdfViewerFragment"
        tools:layout="@layout/fragment_pdf_viewer">
        <argument
            android:name="pdf_uri"
            app:argType="android.net.Uri" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.csucsu.flipendo.settings.SettingsFragment"
        android:label="@string/action_settings"
        tools:layout="@xml/fragment_settings" />

    <action
        android:id="@+id/action_global_settingsFragment"
        app:destination="@id/settingsFragment" />

</navigation>
